# icp-vibe-coding-beginner-challenge

./: .gitignore  Cargo.toml  dfx.json  sitemap.xml
module1-fundamentals/exercises/: 02_variable_basics_starter.rs  03_function_workshop_starter.rs  04_control_flow_challenge_starter.rs
module2-memory-management/exercises/: 03_slice_workshop_starter.rs  04_memory_management_debugging_starter.rs
module5-collections/exercises/: 01_collection_manipulation_starter.rs
module5-collections/exercises/01_collection_manipulation/: index.html
module7-icp-integration/exercises/: Cargo.toml  dfx.json  index.html
modules/module1-fundamentals/exercises/: 01_hello_rust_starter.rs
modules/module2-memory-management/exercises/: 01_ownership_practice_starter.rs  02_borrowing_challenge_starter.rs
modules/module3-data-types/exercises/: 01_library_system_starter.rs  02_error_handling_starter.rs
modules/module4-code-organization/exercises/: 01_module_explorer_starter.rs
modules/module5-collections/exercises/: 01_collection_manipulation.md
modules/module5-collections/exercises/final_challenge/: starter_code.rs
modules/module6-advanced-concepts/exercises/: 01_trait_workshop_starter.rs
modules/module7-icp-integration/exercises/: 01_hello_icp_starter.rs  README.md  hello_icp.did  hello_icp.rs
modules/module7-icp-integration/exercises/src/: lib.rs
search/: search_index.json
