[package]
name = "hello_icp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6"
serde = "1.0"

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = true

[workspace]
# Empty workspace to exclude from parent workspace 